--- a/ssl/src/main/resources/application.properties
+++ b/ssl/src/main/resources/application.properties
@@ -52,7 +52,7 @@ spring.redis.jedis.pool.max-idle=5000
 #\u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
 spring.redis.jedis.pool.min-idle=0
 #\u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u5355\u4F4D\u4E3A\u6BEB\u79D2\uFF09
-spring.redis.timeout=10000
+spring.redis.jedis.timeout=10000
 spring.redis.block-when-exhausted=true
 
 
