--- a/ssl/pom.xml
+++ b/ssl/pom.xml
@@ -53,9 +53,9 @@
         </dependency>
 
         <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-configuration-processor</artifactId>-->
-            <!--<optional>true</optional>-->
+        <!--<groupId>org.springframework.boot</groupId>-->
+        <!--<artifactId>spring-boot-configuration-processor</artifactId>-->
+        <!--<optional>true</optional>-->
         <!--</dependency>-->
 
         <!-- 使用aop模板启动器 -->
@@ -63,7 +63,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
-         <!--配置数据源、mybatis-->
+        <!--配置数据源、mybatis-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
@@ -121,18 +121,27 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.2.2</version>
         </dependency>
-        <!--&lt;!&ndash; cassandra &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>com.datastax.oss</groupId>-->
-            <!--<artifactId>java-driver-core</artifactId>-->
-            <!--<version>4.0.1</version>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>com.datastax.oss</groupId>-->
-            <!--<artifactId>java-driver-query-builder</artifactId>-->
-            <!--<version>4.0.1</version>-->
-        <!--</dependency>-->
+        <!-- cassandra 配置 -->
+        <dependency>
+            <groupId>com.datastax.cassandra</groupId>
+            <artifactId>cassandra-driver-core</artifactId>
+            <version>3.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.datastax.cassandra</groupId>
+            <artifactId>cassandra-driver-mapping</artifactId>
+            <version>3.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.datastax.cassandra</groupId>
+            <artifactId>cassandra-driver-extras</artifactId>
+            <version>3.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
         <!--springboot实现反向代理 -->
         <dependency>
             <groupId>org.mitre.dsmiley.httpproxy</groupId>
@@ -144,7 +153,6 @@
             <artifactId>guava</artifactId>
             <version>18.0</version>
         </dependency>
-
         <!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
@@ -269,5 +277,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
