--- a/ssl/src/main/resources/application.properties
+++ b/ssl/src/main/resources/application.properties
@@ -37,23 +37,23 @@ logging.level.com.liaody.ssl.dao=debug
 # Jedis
 #redis\u6570\u636E\u5E93\u7D22\u5F15\uFF0C\u9ED8\u8BA4\u4E3A0
 spring.redis.database=0
-#\u670D\u52A1\u5730\u5740
-spring.redis.host=192.168.147.140
-#\u7AEF\u53E3
-spring.redis.port=6379
-#\u5BC6\u7801\uFF0C\u9ED8\u8BA4\u4E3A\u7A7A\uFF0C\u672C\u5730\u6CA1\u6709\u8BBE\u7F6E\u5BC6\u7801\uFF0C\u6240\u4EE5\u8FD9\u91CC\u4E0D\u586B\u5199
-spring.redis.password=
-#\u8FDE\u63A5\u6C60\u6700\u5927\u7684\u8FDE\u63A5\u6570\uFF0C\u82E5\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236
-spring.redis.jedis.pool.max-active=5000
-#\u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF0C\u82E5\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236
-spring.redis.jedis.pool.max-wait=10000
-#\u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
-spring.redis.jedis.pool.max-idle=5000
-#\u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
-spring.redis.jedis.pool.min-idle=0
-#\u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u5355\u4F4D\u4E3A\u6BEB\u79D2\uFF09
-spring.redis.jedis.timeout=10000
-spring.redis.block-when-exhausted=true
+##\u670D\u52A1\u5730\u5740
+#spring.redis.host=192.168.147.140
+##\u7AEF\u53E3
+#spring.redis.port=6379
+##\u5BC6\u7801\uFF0C\u9ED8\u8BA4\u4E3A\u7A7A\uFF0C\u672C\u5730\u6CA1\u6709\u8BBE\u7F6E\u5BC6\u7801\uFF0C\u6240\u4EE5\u8FD9\u91CC\u4E0D\u586B\u5199
+#spring.redis.password=
+##\u8FDE\u63A5\u6C60\u6700\u5927\u7684\u8FDE\u63A5\u6570\uFF0C\u82E5\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236
+#spring.redis.jedis.pool.max-active=5000
+##\u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF0C\u82E5\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236
+#spring.redis.jedis.pool.max-wait=10000
+##\u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
+#spring.redis.jedis.pool.max-idle=5000
+##\u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
+#spring.redis.jedis.pool.min-idle=0
+##\u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u5355\u4F4D\u4E3A\u6BEB\u79D2\uFF09
+#spring.redis.jedis.timeout=10000
+#spring.redis.block-when-exhausted=true
 
 
 
