--- a/ssl/pom.xml
+++ b/ssl/pom.xml
@@ -137,11 +137,11 @@
             <artifactId>cassandra-driver-extras</artifactId>
             <version>3.7.2</version>
         </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>18.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.google.guava</groupId>-->
+            <!--<artifactId>guava</artifactId>-->
+            <!--<version>18.0</version>-->
+        <!--</dependency>-->
         <!--springboot实现反向代理 -->
         <dependency>
             <groupId>org.mitre.dsmiley.httpproxy</groupId>
